Revise index.html for event feedback report
Updated HTML structure and content for the report page, including new styling and sections for feedback summary, highlights, and suggestions.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,131 @@
-<!DOCTYPE html>
-<html lang="zh-HK">
+<!doctype html>
+<html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<title>我的 GitHub Pages 網站</title>
+  <meta charset="utf-8" />
+  <title>營會回應報告 - 簡報</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <style>
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", sans-serif; line-height:1.6; color:#222; padding:20px; background:#f7f7fb; }
+    .container { max-width:900px; margin:0 auto; background:#fff; padding:24px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.05); }
+    h1 { margin-top:0; color:#4a2f7a; }
+    h2 { color:#333; margin-bottom:8px; }
+    p.lead { margin-top:0; color:#444; }
+    .summary-grid { display:flex; flex-wrap:wrap; gap:12px; margin-bottom:16px; }
+    .card { background:#faf9ff; padding:12px 14px; border-radius:6px; border:1px solid #efe9fb; flex:1 1 220px; }
+    ul { padding-left:1.1em; }
+    .section { margin-top:18px; }
+    table.stats { width:100%; border-collapse:collapse; margin-top:8px; }
+    table.stats th, table.stats td { text-align:left; padding:8px; border-bottom:1px solid #eee; }
+    .note { font-size:0.95em; color:#666; }
+    footer { margin-top:20px; font-size:0.95em; color:#666; }
+    .quote { background:#fff8e6; border-left:4px solid #ffcc5c; padding:10px; border-radius:4px; color:#4a3a00; margin:8px 0; }
+    .actions li { margin-bottom:6px; }
+  </style>
 </head>
 <body>
-<h1>你好！GitHub Pages 已經成功運作 🎉</h1>
-<p>呢度係我嘅第一個 GitHub Pages 頁面。</p>
+  <div class="container">
+    <h1>營會回應簡報（摘要版）</h1>
+    <p class="lead">來源：表單回應（約 53 份） — 報告整理日期：2026-01-03</p>
+
+    <div class="summary-grid">
+      <div class="card">
+        <strong>回應數</strong>
+        <div>約 53 份</div>
+      </div>
+      <div class="card">
+        <strong>參與投入度</strong>
+        <div>整體高（多數評 5–6；少數 3–4）</div>
+      </div>
+      <div class="card">
+        <strong>整體氛圍</strong>
+        <div>非常正面：感恩、真誠分享、屬靈經歷豐富</div>
+      </div>
+      <div class="card">
+        <strong>下年參加意向</strong>
+        <div>大多數回覆「會」</div>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>主要正面亮點</h2>
+      <ul>
+        <li>屬靈經歷顯著：多位參加者提到 soul card、家庭赦免（第2晚）、敬拜及醫治禱告帶來的釋放與回應。</li>
+        <li>對領袖、遮蓋與籌委的感謝頻繁出現，大家稱讚用心陪伴與安全氛圍。</li>
+        <li>小組分享氛圍溫暖、真誠，參加者普遍感到被接納與支持。</li>
+        <li>活動安排多樣，見證與敬拜獲高度肯定。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>參加者領受與常見收穫</h2>
+      <ul>
+        <li>靈性：家庭關係醫治、放下羞恥與執著、被天父接納感。</li>
+        <li>實際行動：願意投入青年事工、參加門訓/崇拜/家組、持續禱告與陪伴。</li>
+        <li>情緒：得到平安、釋放與自信恢復。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>主要改善建議（高頻）</h2>
+      <ul>
+        <li><strong>時間與節奏：</strong>希望增加休息時間、避免行程過度緊湊。</li>
+        <li><strong>指引與準備：</strong>活動指示需更清楚（建議提供 PPT 或一頁式流程），並在營前完成更多準備。</li>
+        <li><strong>小組規模/格式：</strong>考慮小組分流或男女分組，避免大型圓桌時間過長。</li>
+        <li><strong>公共活動安全：</strong>在地鐵上進行的活動（City Hunt）有隱私與安全疑慮，建議改為營地或附近區域進行。</li>
+        <li><strong>敬拜品質：</strong>建議安排更多排練或穩定主領，幫助會眾更快進入敬拜。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>代表性摘錄（節錄）</h2>
+      <div class="quote">「Hannah 分享佢同佢爸爸既野」 — 見證被重視</div>
+      <div class="quote">「day2夜晚敬拜」 — 敬拜時刻深刻</div>
+      <div class="quote">「抽卡環節 神透過卡片與我說話」 — soul card 經驗頻繁被提及</div>
+      <div class="quote">「時間上安排…有時太早起或太遲完，令大家休息不夠」 — 節奏與休息反饋</div>
+      <div class="quote">「辛苦籌委，大家付出心血」 — 對籌辦團隊的感謝</div>
+    </div>
+
+    <div class="section">
+      <h2>可執行建議（優先順序）</h2>
+      <ol class="actions">
+        <li><strong>高優先（營前處理）</strong>
+          <ul>
+            <li>調整時間表：加入休息/彈性時間，避免連續高強度活動。</li>
+            <li>修改地鐵任務：將 City Hunt 檢查點移至營地周邊或改為更安全方式。</li>
+            <li>製作領袖教材：每環節一頁流程或關鍵提示，營前發放組長與遮蓋。</li>
+            <li>建立跟進名單：標記需後續關懷的參加者，安排短期牧養跟進。</li>
+          </ul>
+        </li>
+        <li><strong>中期（1–3 個月）</strong>
+          <ul>
+            <li>敬拜團隊排練與主領穩定化。</li>
+            <li>小組規模檢討，必要時做 breakout 分組。</li>
+            <li>招募更多活動幫手，減輕組長負擔。</li>
+          </ul>
+        </li>
+        <li><strong>長期</strong>
+          <ul>
+            <li>建立常態門訓與後續跟進路徑（門訓、週崇拜、家組）。</li>
+            <li>營前說明會與安全指引，把更多準備工作移到營前完成。</li>
+          </ul>
+        </li>
+      </ol>
+    </div>
+
+    <div class="section">
+      <h2>建議的下一步（分工簡表）</h2>
+      <table class="stats">
+        <tr><th>職責</th><th>建議時程</th></tr>
+        <tr><td>籌辦團隊：時間表與 City Hunt 調整、領袖指引</td><td>2–4 週</td></tr>
+        <tr><td>敬拜負責人：排練與主領確認</td><td>1 個月</td></tr>
+        <tr><td>後勤/物資：招募幫手、營前清單</td><td>2–6 週</td></tr>
+        <tr><td>牧養團隊：整理追蹤名單、安排後續關懷</td><td>1–2 週內開始</td></tr>
+      </table>
+    </div>
+
+    <footer>
+      <p class="note">若需：我可以將此 HTML 壓縮成單一檔案供下載、或生成可列印的一頁 PDF。也可幫你產出附上代表性回應的 CSV 匯總。</p>
+    </footer>
+  </div>
 </body>
 </html>
